<resources>
    <string name="app_name">ZoharAndroid</string>
    <string name="note_username">邮箱/手机号</string>
    <string name="note_password">密码</string>
    <string name="again_note_password">再次输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_out">退出登录</string>
    <string name="register_note">没有账号？请点击</string>
    <string name="login_success">登录成功！</string>
    <string name="login_failed">登录失败！</string>
    <string name="search">搜索</string>
    <string name="hot_search">热搜</string>
    <string name="search_info">发现更多内容</string>

    <string name="collection">收藏</string>
    <string name="setting">设置</string>
    <string name="aboutus">关于我</string>

    <string name="home">首页</string>
    <string name="knowledge_hierarchy">知识体系</string>
    <string name="public_number">公众号</string>
    <string name="navigation">导航</string>
    <string name="projects">项目</string>
    <string name="slash_line">/</string>
    <string name="refresh">新</string>

    <string name="loading">正在加载...</string>

    <string name="share">分享</string>
    <string name="open_browser">用浏览器打开</string>
</resources>
