<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:orderInCategory="1"
        android:id="@+id/item_collection_article"
        android:icon="@mipmap/icon_item_collection_article"
        android:title="@string/collection"
        app:showAsAction="ifRoom" />

    <item
        android:orderInCategory="2"
        android:id="@+id/item_share_article"
        android:icon="@mipmap/icon_item_share"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item
        android:orderInCategory="3"
        android:id="@+id/item_open_browser"
        android:icon="@mipmap/icon_item_browser"
        android:title="@string/open_browser"
        app:showAsAction="never"/>
</menu>